fixed overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
   --font-md: 1.2rem;
   --font-sm: 0.9rem;
 
-  --spacing-section: 60px 0;
+  --spacing-section: 80px 0;
   --radius: 6px;
   --transition: 0.3s ease-in-out;
 
@@ -35,7 +35,10 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+html ,body{
   overflow-x: hidden;
+  width: 100%;
 }
 a{
   text-decoration: none !important;
@@ -83,7 +86,7 @@ a{
 }
 .banner_wrapper {
   position: relative;
-  padding: 60px 0;
+  padding: var(--spacing-section);
   background: var(--white);
   overflow: hidden;
   min-height: 80vh;
